--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
 
 
 .draggable {
+
     cursor: pointer; /* Change icon */
     display: flex;
     align-items: center;
@@ -117,4 +118,27 @@ body {
     */
     padding: 15px;
     flex: 1;
+
 }
+
+.check-btn {
+    background-color: var(--background-color);
+    border: none;
+    color: var(--text-color);
+    font-size: 16px;
+    padding: 10px 20px; /* TB & LR */
+    cursor: pointer;
+}
+
+.check-btn:active{
+
+    transform: scale(0.98); /* Scale down when clicking */
+
+}
+
+.check-btn:focus{
+
+    outline: none;
+
+}
+
